# lspipat

./: Makefile.am  README  configure.ac
doc/: Makefile.am  pattern.txt  reference.xml
samples/: exp2bf.lua  regexp.lua  wave.lua
spipat-patches/: 0.9.3+_image.patch
src/: Makefile.am  call.c  compose.c  lspipat.c  lspipat.h  lspipat.lua  misc.c  render.c  simple.c  string.c  uint.c  unary.c
